@@ -42,6 +42,8 @@ go.sum: go.mod Makefile #tidy
 	@#go get golang.org/x/exp/slog # experimental slog (go <1.21)
 	@go get github.com/azorg/xlog
 	@go get sigs.k8s.io/yaml
+	@#go get github.com/ghodss/yaml
+	@go get github.com/itchyny/json2yaml
 	@go get github.com/stretchr/testify/require
 	@touch go.sum
 
