@@ -1,10 +1,11 @@
 module github.com/azorg/jconf
 
-go 1.21.6
+go 1.22.3
 
 require (
 	github.com/azorg/xlog v1.0.3 // indirect
 	github.com/davecgh/go-spew v1.1.1 // indirect
+	github.com/itchyny/json2yaml v0.1.4 // indirect
 	github.com/pmezard/go-difflib v1.0.0 // indirect
 	github.com/stretchr/testify v1.9.0 // indirect
 	gopkg.in/yaml.v3 v3.0.1 // indirect
