@@ -1,5 +1,7 @@
 2024.08.23:
  * add YAML support (based on "sigs.k8s.io/yaml")
+ * add "github.com/itchyny/json2yaml" for preserves the
+ order of mapping keys into YAML
 
 2024.02.03:
  * initial commit
